# Games2022

./: .gitignore  CMakeLists.txt  CS454.sln  CS454.vcxproj  CS454.vcxproj.filters  Makefile  README.md  Readme.md  a.out  main.cpp
CS454/: CS454.cpp  CS454.h  CS454.sln  CS454.vcxproj  CS454.vcxproj.filters  TODO.md  packages.config
CS454/Engine/Configs/: GameConfig.json  MainConfig.json  MapConfig.json  MusicConfig.json  PalaceBotAnimatorConfig.json  PlayerAnimatorConfig minos edition.json  PlayerAnimatorConfig.json  PlayerConfig.json  StalfosAnimatorConfig.json
CS454/Engine/Configs/enemy/: GumaAnimatorConfig.json  GumaConfig.json  PalaceBotAnimatorConfig.json  PalaceBotConfig.json  ProjectileAnimatorConfig.json  ProjectileConfig.json  StaflosAnimatorConfig.json  StaflosConfig.json  WosuAnimatorConfig.json  WosuConfig.json
CS454/Engine/Configs/item/: DoorAnimatorConfig.json  FairyAnimatorConfig.json  HealthPotionAnimatorConfig.json  KeyAnimatorConfig.json  LifeUpAnimatorConfig.json  ManaPotionAnimatorConfig.json  PointBagAnimatorConfig.json  SwordAnimatorConfig.json
CS454/Engine/Configs/object/: DoorAnimatorConfig.json  ElevatorAnimatorConfig.json
CS454/Engine/Src/Animators/: Animator.h
CS454/Engine/Src/Animators/PlayerAnimator/: PlayerAnimator.cpp  PlayerAnimator.h
CS454/Engine/Src/Animators/SingleAnimation/: SingleAnimation.cpp  SingleAnimation.h
CS454/Engine/Src/App/: App.cpp  App.h
CS454/Engine/Src/BitMap/: BitMap.cpp  BitMap.h
CS454/Engine/Src/Entities/: Entity.cpp  Entity.h  Projectile.cpp  Projectile.h
CS454/Engine/Src/Entities/Enemies/: Enemy.cpp  Enemy.h  GumaEnemy.cpp  GumaEnemy.h  PalaceBotEnemy.cpp  PalaceBotEnemy.h  StaflosEnemy.cpp  StaflosEnemy.h  WosuEnemy.cpp  WosuEnemy.h
CS454/Engine/Src/Entities/Items/: DoorItem.cpp  DoorItem.h  HealthPotionItem.cpp  HealthPotionItem.h  Item.cpp  Item.h  KeyItem.h  KeysItem.cpp  LifeUpItem.cpp  LifeUpItem.h  ManaPotionItem.cpp  ManaPotionItem.h  PointBagItem.cpp  PointBagItem.h  Sword.cpp  Sword.h
CS454/Engine/Src/Entities/Objects/: Elevator.cpp  Elevator.h
CS454/Engine/Src/Entity/: Entity.h
CS454/Engine/Src/Game/: Game.cpp  Game.h
CS454/Engine/Src/Map/: Map.cpp  Map.h
CS454/Engine/Src/Misc/: Source.cpp  WhereAmI.h
CS454/Engine/Src/Misc/MusicPlayer/: MusicPlayer.cpp  MusicPlayer.h
CS454/Engine/Src/Misc/Screen/: Screen.cpp  Screen.h
CS454/Engine/Src/Misc/Timer/: Timer.cpp  Timer.h
CS454/Engine/Src/Player/: Player.cpp  Player.h
CS454/Engine/Src/Player/DisplayStats/: DisplayStats.cpp  DisplayStats.h
CS454/Engine/Src/Player/Spells/: Spell.h
CS454/Engine/Src/Screen/: Screen.cpp  Screen.h
CS454/Engine/Src/Tiles/Map/: TileMap.cpp  TileMap.h
CS454/Engine/Src/Tiles/Parser/: TileParser.cpp  TileParser.h
CS454/Engine/Src/Utils/: ExitPoint.cpp  ExitPoint.h  MapEntities.cpp  MapEntities.h  Point.cpp  Point.h  player_state.cpp  player_state.h
CS454/Media/: background palace map.tmx  map.tiled-session
CS454/Media/background map/: background palace map..csv  map.tiled-session
CS454/Media/background_map/: 1st_floor_bg.csv  1st_floor_bg.tmx  1st_floor_map.csv  1st_floor_right.csv  1st_floor_right.tmx  1st_floor_right_bg.csv  1st_floor_right_bg.tmx  CONFIG.txt  background palace 1st floor map.tmx  background_palace_1st_floor_map.tmx  background_palace_map.csv  background_palace_map.tmx  boss_room.csv  boss_room.tmx  boss_room_bg.csv  boss_room_bg.tmx  loading_screen.csv  loading_screen.tmx  loose_screen.csv  loose_screen.tmx  loose_screen_bg.csv  loose_screen_bg.tmx  main_screen.csv  main_screen.tmx  main_screenbg.csv  main_screenbg.tmx  palace tileset.tsx  sky.csv  sky.tmx  win_screen.csv  win_screen.tmx
CS454/UnitTests/UnitTest1Media/: UnitTest1.cpp  UnitTest1.h  main.cpp
CS454/x64/Debug/: CS454.exe.recipe  CS454.ilk  CS454.vcxproj.FileListAbsolute.txt  vc143.idb
CS454/x64/Debug/CS454.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CS454.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CS454/x64/Release/: CS454.exe.recipe
Media/UnitTest1Media/: grass_biome..tsj
Tiles/Parser/: TileParser.cpp  TileParser.h
